--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .princ{
     /* background-color: rgb(30, 49, 160); */
-    background: url(../media/portada.jpg);
+    /* background: url(../media/portada.jpg); */
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
