--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
-.princ{
-    background-color: rgb(30, 49, 160);
-    /* background: url(../media/portada.jpg);
+.portada{
+    /* background-color: rgb(30, 49, 160); */
+    background: url(../media/portada.jpg);
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: contain; */
+    background-size: cover;
     height: 100vh;
+    color: white;
 }
